--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,14 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+      - name: Trim GitHub SHA to 5 characters
+        id: trim-sha
+        run: echo "::set-output name=TRIMMED_SHA::${GITHUB_SHA::5}"
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: exchange_rate
           IMAGE_TAG: exchange_rate
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_SHA
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.trim-sha.outputs.TRIMMED_SHA }}
