--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: exchange_rate
-          IMAGE_TAG: exchange_rate
+          IMAGE_TAG: exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.trim-sha.outputs.TRIMMED_SHA }}
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
