--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,8 @@ jobs:
         run: echo "::set-output name=TRIMMED_SHA::${GITHUB_SHA::5}"
 
       - name: Create Image 
-        run: |
+        run: | 
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker build -t ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
 
       - name: Install jq
@@ -42,7 +43,7 @@ jobs:
       - name: Run Trivy for vulnerability scanning
         run: |
           # Run Trivy scan and capture the output
-          trivy_output=$(docker run --rm aquasec/trivy -f json ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }})
+          trivy_output=$(docker run --rm aquasec/trivy -f json ${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }})
 
           # Parse the Trivy scan output for vulnerabilities
           critical_vulnerabilities=$(echo $trivy_output | jq '.[].Vulnerabilities | map(select(.Severity == "CRITICAL")) | length')
