--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Create Image 
         run: |
-          docker build -t ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
+          docker build -t ${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
 
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
