--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,10 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Pull trivy docker image
-        run: docker pull aquasec/trivy:latest
+      - name: Pull and run trivy docker image
+        run: |
+          docker pull aquasec/trivy:latest
+          docker run -it aquasec/trivy:latest
 
       - name: Run Trivy for vulnerability scanning
         run: |
