pulled and run trivy image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,12 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Pull and run trivy docker image
+      - name: Install Trivy
         run: |
-          docker pull aquasec/trivy:latest
-          docker run -t aquasec/trivy:latest
+          wget https://github.com/aquasecurity/trivy/releases/download/v0.20.0/trivy_0.20.0_Linux-64bit.tar.gz
+          tar zxvf trivy_0.20.0_Linux-64bit.tar.gz
+          sudo mv trivy /usr/local/bin/
+          trivy --version
 
       - name: Run Trivy for vulnerability scanning
         run: |
