--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run Trivy for vulnerability scanning
         run: |
           # Run Trivy scan and capture the output
-          trivy_output=$(trivy --exit-code 1 --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH --format json --no-progress "${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}")
+          trivy_output=$(trivy --ignore-unfixed --vuln-type os,library --severity CRITICAL,HIGH --format json --no-progress "${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}")
 
           # Parse the Trivy scan output for vulnerabilities
           critical_vulnerabilities=$(echo $trivy_output | jq '.[].Vulnerabilities | map(select(.Severity == "CRITICAL")) | length')
