added check for high vul..

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,9 +61,13 @@ jobs:
           trivy_output=${{ steps.scan-image.outputs.scan_results }}
 
           critical_vulnerabilities=$(echo "$trivy_output" | jq '.[0].Vulnerabilities[] | select(.Severity == "CRITICAL")' | wc -l)
+          high_vulnerabilities=$(echo "$trivy_output" | jq '.[0].Vulnerabilities[] | select(.Severity == "HIGH")' | wc -l)
 
           if [ "$critical_vulnerabilities" -gt 0 ]; then
           echo "Critical vulnerabilities found: $critical_vulnerabilities"
+            exit 1
+          elif [ "$high_vulnerabilities" -gt 0 ]; then
+            echo "High severity vulnerabilities found: $high_vulnerabilities"
             exit 1
           else
             echo "No critical vulnerabilities found."
