--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: '${{ secrets.DOCKER_USERNAME }}'
-          password: '${{ secrets.DOCKER_PASSWORD }}'
+      - name: Setup node
+        uses: actions/setup-node@v2
+
+      - name: install dependencies
+        run: npm install
+
+      - name: Build website
+        run: npm run build
+
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: '${{ secrets.DOCKER_USERNAME }}'
+      #     password: '${{ secrets.DOCKER_PASSWORD }}'
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -27,42 +36,45 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: copy to s3
+        run: aws s3 sync ./build/. s3://exchange_rates
 
-      - name: Trim GitHub SHA to 5 characters
-        id: trim-sha
-        run: echo "::set-output name=TRIMMED_SHA::${GITHUB_SHA::5}"
+      # - name: Login to Amazon ECR
+      #   id: login-ecr
+      #   uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Create Image 
-        run: |
-          docker build -t ${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
+      # - name: Trim GitHub SHA to 5 characters
+      #   id: trim-sha
+      #   run: echo "::set-output name=TRIMMED_SHA::${GITHUB_SHA::5}"
 
-      - name: Install Trivy and jq
-        run: |
-          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-          echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update && sudo apt-get install -y trivy jq
+      # - name: Create Image 
+      #   run: |
+      #     docker build -t ${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }} .
 
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        id: scan-image
-        with:
-          image-ref: '${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}'
-          format: 'json'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
-          ignore-file: '.trivyignore'
-          output: 'trivy_results.json'
+      # - name: Install Trivy and jq
+      #   run: |
+      #     wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+      #     echo "deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main" | sudo tee -a /etc/apt/sources.list.d/trivy.list
+      #     sudo apt-get update && sudo apt-get install -y trivy jq
 
-      - name: Check Trivy scan results
-        run: |
-          if grep -q '"Severity":"CRITICAL"' "trivy_results.json" ; then
-            echo "Critical vulnerabilities found, stopping workflow."
-            exit 1
-          fi
+      # - name: Run Trivy vulnerability scanner
+      #   uses: aquasecurity/trivy-action@master
+      #   id: scan-image
+      #   with:
+      #     image-ref: '${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}'
+      #     format: 'json'
+      #     ignore-unfixed: true
+      #     vuln-type: 'os,library'
+      #     severity: 'CRITICAL,HIGH'
+      #     ignore-file: '.trivyignore'
+      #     output: 'trivy_results.json'
 
-      - name: Build, tag, and push image to Amazon ECR
-        run: docker push ${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}
+      # - name: Check Trivy scan results
+      #   run: |
+      #     if grep -q '"Severity":"CRITICAL"' "trivy_results.json" ; then
+      #       echo "Critical vulnerabilities found, stopping workflow."
+      #       exit 1
+      #     fi
+
+      # - name: Build, tag, and push image to Amazon ECR
+      #   run: docker push ${{ steps.login-ecr.outputs.registry }}/exchange_rate:exchange_rate_${{ steps.trim-sha.outputs.TRIMMED_SHA }}
