added job to create s3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
+      - name: Create S3 bucket
+        run: |
+          aws s3api create-bucket --bucket exchange_rate --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
+
       - name: copy to s3
         run: aws s3 sync ./build/. s3://exchange_rates
 
