changed name of s3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Create S3 bucket
         run: |
-          aws s3api create-bucket --bucket exchange_rate --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
+          aws s3api create-bucket --bucket exchange-rate --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
 
       - name: copy to s3
         run: aws s3 sync ./build/. s3://exchange_rates
