--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Check if bucket exists
         id: check_if_bucket_exist
         run: |
-          if aws s3api head-bucket --bucket "exchange-rate-unique1234" 2>/dev/null; then
-              echo "Bucket 'exchange-rate-unique1234' already exists."
+          if aws s3api head-bucket --bucket "exchange-rate-unique12345" 2>/dev/null; then
+              echo "Bucket 'exchange-rate-unique12345' already exists."
               echo "::set-output name=bucket_exists::true"
           else
               echo "::set-output name=bucket_exists::false"
@@ -49,10 +49,10 @@ jobs:
       - name: Create S3 bucket
         if: steps.check_if_bucket_exist.outputs.bucket_exists == 'false'
         run: |
-          aws s3api create-bucket --bucket exchange-rate-unique1234 --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
+          aws s3api create-bucket --bucket exchange-rate-unique12345 --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
 
       - name: copy to s3
-        run: aws s3 sync ./build/. s3://exchange-rate-unique1234
+        run: aws s3 sync ./build s3://exchange-rate-unique12345
 
       # - name: Login to Amazon ECR
       #   id: login-ecr
