--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,23 +36,41 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-west-2
 
-      - name: Check if bucket exists
-        id: check_if_bucket_exist
-        run: |
-          if aws s3api head-bucket --bucket "exchange-rate-unique12345" 2>/dev/null; then
-              echo "Bucket 'exchange-rate-unique12345' already exists."
-              echo "::set-output name=bucket_exists::true"
-          else
-              echo "::set-output name=bucket_exists::false"
-          fi
+      # - name: Check if bucket exists
+      #   id: check_if_bucket_exist
+      #   run: |
+      #     if aws s3api head-bucket --bucket "exchange-rate-unique12345" 2>/dev/null; then
+      #         echo "Bucket 'exchange-rate-unique12345' already exists."
+      #         echo "::set-output name=bucket_exists::true"
+      #     else
+      #         echo "::set-output name=bucket_exists::false"
+      #     fi
 
-      - name: Create S3 bucket
-        if: steps.check_if_bucket_exist.outputs.bucket_exists == 'false'
+      - name: Create DynamoDB table
         run: |
-          aws s3api create-bucket --bucket exchange-rate-unique12345 --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
+          aws dynamodb create-table \
+            --table-name exchange_rate_table \
+            --attribute-definitions \
+              AttributeName=currency,AttributeType=S \
+            --key-schema \
+              AttributeName=currency,KeyType=HASH \
+            --billing-mode PAY_PER_REQUEST \
+            --region us-west-2
+  
+      - name: Put item into DynamoDB table
+        run: |
+          aws dynamodb put-item \
+            --table-name exchange_rate_table \
+            --item '{"currency": {"S": "USD"}, "rate": {"N": "1.0"}}' \
+            --region us-west-2
 
-      - name: copy to s3
-        run: aws s3 sync ./build s3://exchange-rate-unique12345
+      # - name: Create S3 bucket
+      #   if: steps.check_if_bucket_exist.outputs.bucket_exists == 'false'
+      #   run: |
+      #     aws s3api create-bucket --bucket exchange-rate-unique12345 --region us-west-2 --create-bucket-configuration LocationConstraint=us-west-2
+
+      # - name: copy to s3
+      #   run: aws s3 sync ./build s3://exchange-rate-unique12345
 
       # - name: Login to Amazon ECR
       #   id: login-ecr
