--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,10 @@ jobs:
               AttributeName=currency,KeyType=HASH \
             --billing-mode PAY_PER_REQUEST \
             --region us-west-2
+
+      - name: Wait for table creation
+        run: |
+          aws dynamodb wait table-exists --table-name exchange_rate_table --region us-west-2
   
       - name: Put item into DynamoDB table
         run: |
